[tool.poetry]
name = "docat"
version = "0.0.0"
description = "Host your docs. Simple. Versioned. Fancy."
authors = ["Felix <hi@l33t.name>", "Benj <randombenj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.2"
fastapi = {version = "^0.129.0", extras = ["all"]}
python-multipart = "^0.0.20"
uvicorn = "^0.40.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
requests = "^2.32.5"
mypy = "^1.19.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff -ra -v"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "tinydb",
    "tinydb.storages",
    "uvicorn"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 140
# Rule descriptions: https://docs.astral.sh/ruff/rules/
lint.select = ["I", "E", "B", "F", "W", "N", "C4", "C90", "ARG", "PL", "RUF", "UP"]
# TODO: Should be reduct to no global exceptions
lint.ignore = ["B008", "N806", "PLR0911", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
# Ignore for all tests (Magic value used in comparison)
# We use magic values in tests
"tests/*" = ["PLR2004"]
