[project]
name = "docat"
version = "0.0.0"
description = "Host your docs. Simple. Versioned. Fancy."
authors = [
    { name = "Felix", email = "hi@l33t.name" },
    { name = "Benj", email = "randombenj@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tinydb",
    "fastapi[all]",
    "uvicorn",
    "python-multipart",
    "python-magic",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "requests",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff -ra -v"
testpaths = [
    "tests"
]

[[tool.mypy.overrides]]
module = [
    "tinydb",
    "tinydb.storages",
    "uvicorn"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 140
# Rule descriptions: https://docs.astral.sh/ruff/rules/
lint.select = ["I", "E", "B", "F", "W", "N", "C4", "C90", "ARG", "PL", "RUF", "UP"]
# TODO: Should be reduct to no global exceptions
lint.ignore = ["B008", "N806", "PLR0911", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
# Ignore for all tests (Magic value used in comparison)
# We use magic values in tests
"tests/*" = ["PLR2004"]
